Fix slick slider image overflow

--- a/monticello/_news.scss
+++ b/monticello/_news.scss
@@ -56,10 +56,13 @@
     transform: translate(-50%, -50%);
 }
 
+.slick-slide {
+    margin: 0 10px; //prevents seeing the next card line
+}
+
 .news_card_container {
     width: 100%;
     max-width: 370px;
-    margin-right: 20px;
     background-color: layout.$white;
 
     .news_card_container__img {
@@ -145,5 +148,5 @@
     background-repeat: no-repeat;
     background-size: auto;
     background-position: center;
-    right: -40px;
+    right: -60px;
 }
